--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ header nav ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 30px;
 }
 header nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    font-size: 2rem;
 }
 header nav ul li a:hover {
     text-decoration: underline;
@@ -32,10 +33,10 @@ header nav ul li a:hover {
     padding: 100px 20px;
 }
 .hero-content h1 {
-    font-size: 3rem;
+    font-size: 5rem;
 }
 .hero-content p {
-    font-size: 1.5rem;
+    font-size: 3rem;
     margin: 20px 0;
 }
 .cta-button {
@@ -45,4 +46,44 @@ header nav ul li a:hover {
     text-decoration: none;
     font-weight: bold;
     border-radius: 10px;
+}
+
+/* About Section */
+.about {
+    padding: 50px 20px;
+    text-align: center;
+    background-color: #f0efef;
+}
+
+.about h2 {
+    font-size: 3rem;
+}
+
+.about p {
+    font-size: 1.5rem;
+    color: #555;
+}
+
+/* Skills Section */
+.skills {
+    padding: 50px 20px;
+    text-align: center;
+}
+
+.skills h2 {
+    font-size: 2.5rem;
+}
+
+.skill-list {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.skill-item {
+    padding: 20px;
+    background-color: #f0efef;
+    border-radius: 10px;
+    width: 25%;
 }
