--- a/style.css
+++ b/style.css
@@ -87,3 +87,27 @@ header nav ul li a:hover {
     border-radius: 10px;
     width: 25%;
 }
+
+/* Projects Section */
+.project {
+    padding: 50px 20px;
+    text-align: center;
+}
+
+.project h2 {
+    font-size: 2.5rem;
+}
+
+.project-list {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.project-item {
+    padding: 20px;
+    background-color: #f0efef;
+    border-radius: 10px;
+    width: 25%;
+}
