--- a/style.css
+++ b/style.css
@@ -89,12 +89,12 @@ header nav ul li a:hover {
 }
 
 /* Projects Section */
-.project {
+.projects {
     padding: 50px 20px;
     text-align: center;
 }
 
-.project h2 {
+.projects h2 {
     font-size: 2.5rem;
 }
 
